@@ -1,3 +1,8 @@
+*** 20010805_9 by db
+- make NON_REDUNDANT_KLINES always on, removed #define for it
+
+
+
 *** 20010805_8 by leeh
 - removed some debugging symbols
 
